# django-deepface

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  tech_concepts.dot
.github/workflows/: ci.yml  test.yml
django_deepface/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
django_deepface/management/commands/: add_image_tree.py
django_deepface/migrations/: 0001_initial.py  0002_initial.py
django_deepface/templates/: base.html
django_deepface/templates/django_deepface/: base.html  index.html  login.html  profile.html
django_deepface/tests/: conftest.py  settings.py  test_views.py  urls.py
django_deepface/utils/: __init__.py  face_processing.py  file_handling.py  validation.py
scripts/: prepare_release.py  update_badge.py
tests/: conftest.py  settings.py  test_views.py  urls.py
