[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deepface"
version = "0.1.0"
description = "Django app for face recognition authentication using DeepFace"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Russ Ferriday", email = "russ.ferriday@gmail.com"},
]
keywords = ["django", "deepface", "face-recognition", "authentication", "biometric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Django Applications",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=4.0",
    "deepface>=0.0.75",
    "pgvector>=0.2.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "django-stubs>=1.12",
    "pre-commit>=2.20",
]

[project.urls]
Homepage = "https://github.com/topiaruss/django-deepface"
Documentation = "https://django-deepface.readthedocs.io"
Repository = "https://github.com/topiaruss/django-deepface"
Issues = "https://github.com/topiaruss/django-deepface/issues"

[tool.setuptools]
package-data = { "django_deepface" = ["templates/**/*.html"] }

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["django_deepface"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
plugins = ["mypy_django_plugin.main"]

[tool.mypy-django_deepface.migrations]
ignore_errors = true 